--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.loremipsum.recifeguide">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".RecifeGuideApp"
         android:allowBackup="true"
@@ -9,15 +10,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity   android:name=".LoginActivity"
+                    android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/appFacebook_id"></meta-data>
-    </application>
+        <activity   android:name=".MainActivity"
+                    android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/appFacebook_id"></meta-data>
+    </application>
 </manifest>
