--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.google.android.gms:play-services-maps:9.6.1'
+    compile 'com.jakewharton:butterknife:8.4.0'
 }
