--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,12 @@
                     android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+
+        <activity
+            android:name=".CategoriaLocalActivity"
+            android:label="Categoria Local">
+        </activity>
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/appFacebook_id"></meta-data>
