--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,12 @@
 apply plugin: 'com.android.application'
 
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
 
     defaultConfig {
+
         applicationId "com.loremipsum.recifeguide"
         minSdkVersion 15
         targetSdkVersion 24
@@ -31,4 +33,5 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.android.gms:play-services-maps:9.6.1'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.google.android.gms:play-services-location:9.6.1'
 }
