--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 
 android {
@@ -38,5 +39,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:9.6.1'
     compile 'com.google.android.gms:play-services-auth:9.6.1'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'org.parceler:parceler-api:1.1.5'
+    compile 'com.github.clans:fab:1.6.2'
+    apt 'org.parceler:parceler:1.1.5'
 
 }
