--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -45,14 +46,6 @@
         </activity>
         <activity
             android:name=".LocalActivity"
-            android:label="Lista de Locais"
-            android:parentActivityName=".CategoriaLocalActivity">
-            <meta-data
-                android:name="parentActivityName"
-                android:value=".CategoriaLocalActivity" />
-        </activity>
-        <activity
-            android:name=".LocalActivity2"
             android:label="Lista de Locais"
             android:parentActivityName=".CategoriaLocalActivity">
             <meta-data
