--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'org.parceler:parceler-api:1.1.5'
     compile 'com.github.clans:fab:1.6.2'
+    compile 'com.github.jd-alexander:library:1.1.0'
     apt 'org.parceler:parceler:1.1.5'
+
 
 }
