--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
     <application
         android:name=".RecifeGuideApp"
+        android:persistent="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_navigation_black_24dp"
         android:label="@string/app_name"
